jsonschemadsl2ecore.trafo.opt/test/test02/invalidtests/example6.test2
{
	"name":"John",
	"surname":"Smith",
	"age":55,
	"adult":true,
	"job":{
		"role":"enngineer",
		"level":6,
		"add":true
	}
	
}